# py-range

./: AGENTS.md  README.md  box.py  pyproject.toml
src/py_range/: __init__.py  box.py  segment.py  utils.py
tests/: test_box.py  test_segment.py  test_utils.py
